# cdr-verification

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  README.md  data.json  next.config.js  package-lock.json  package.json  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: main.yml  pytest.yml  release-drafter.yml  validation.yml
cdr_verification/: README.md  __init__.py  common.py  postprocess.py  pyproject.toml  sheets_to_json.py  validation.py  validation_rules.py
cdr_verification/tests/: test_postprocess.py
ci/: environment.yml
components/: circle-icons.js  circle.js  component.js  constants.js  contributors.js  description.js  documentation.js  element.js  equation.js  history.js  main.js  page.js  pathway-description.js  pathway-info.js  pathway-selector.js  select.js  tooltip.js  uncertainty.js  utils.js
data/: BiCRS.json  Biomass_Carbon_Removal_and_Storage_(BiCRS).json  DAC.json  Direct_Air_Capture.json  EW.json  Enhanced_Weathering.json  OAE_echem.json  OAE_mineral.json  OCEAN_BIO_harvest.json  OCEAN_BIO_no_harvest.json  Ocean_Alkalinity_Enhancement.json  Ocean_Alkalinity_Enhancement_-_Electrochemical.json  Ocean_Alkalinity_Enhancement_-_Mineral.json  Ocean_Alkalinity_Enhancement_Electrochemical.json  Ocean_Alkalinity_Enhancement_Mineral.json  Ocean_Biomass_Sinking.json  Ocean_Biomass_Sinking_-_Harvest.json  Ocean_Biomass_Sinking_Harvest.json  Ocean_Biomass_Sinking_No_-_Harvest.json  Ocean_Biomass_Sinking_No_Harvest.json  TER_BIO.json  Terrestrial_Biomass_Sinking.json  components.json  contributors.json  legend.json  pathways.json
pages/: 404.js  [id].js  _app.js  index.js  login.js
pycdr/: common.py  postprocess.py  sheets_to_json.py
scripts/: DAC_alt.csv  asdf  auth.py  cdr_ex.json  environment.yml  postprocess.py  sheets_to_json.ipynb  sheets_to_json.py  validation.py  validation_rules.py
src/: README.md  postprocess.py  validation_rules.py
utils/: data.js  generate-contents.js
(+115 files in other folders)
